--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": ">=18.16.0"
+  },
   "dependencies": {
-  "axios": "^1.6.6",
-  "cors": "^2.8.5",
-  "dotenv": "^16.3.1",
-  "express": "^4.18.2",
-  "openai": "^5.3.0",
-  "xml2js": "^0.5.3"
-}
-
+    "axios": "^1.6.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "openai": "^5.3.0",
+    "xml2js": "^0.5.2"
+  }
 }
