--- a/package.json
+++ b/package.json
@@ -3,12 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "engines": {
-    "node": ">=18.16.0"
-  },
+  "scripts": { "start": "node server.js" },
+  "engines": { "node": ">=18.16.0" },
   "dependencies": {
     "axios": "^1.6.6",
     "cors": "^2.8.5",
