--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
-  "scripts": { "start": "node server.js" },
-  "engines": { "node": ">=18.16.0" },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": ">=18.16.0 <19.0.0"
+  },
   "dependencies": {
-    "axios": "^1.6.6",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "axios": "^1.6.6",
     "openai": "^5.3.0",
     "xml2js": "^0.5.2"
   }
