--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "bazaarika-chatbot-render",
-  "version": "1.1.0",
-  "description": "Simple ChatGPT API chatbot with SSE streaming for Render.com",
+  "name": "bazaarika-chatbot",
+  "version": "1.0.0",
+  "description": "AI chatbot for bazaarika.in",
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "start": "node server.js"
   },
-  "engines": { "node": ">=18" },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "openai": "^4.59.0"
-  }
+    "openai": "^4.52.2",
+    "@google/generative-ai": "^0.15.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
